# my_printf

./: CMakeLists.txt  Printf  Printf.exe.stackdump  nom.txt
Libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_charac_is_base.c  ft_charac_is_sign.c  ft_charac_is_whitespace.c  ft_concat_params.c  ft_create_elem.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_list_at.c  ft_list_clear.c  ft_list_cpy.c  ft_list_find.c  ft_list_last.c  ft_list_print.c  ft_list_push_back.c  ft_list_push_front.c  ft_list_push_params.c  ft_list_reverse.c  ft_list_size.c  ft_list_sort.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  (+44 more)
Sources/: Cahier des charges  Fct param opt.c  Fct param opt.h  Printf.c  Printf.h  a.out  errors.c  errors.h  main.c  print_fields.c  printf_fields.h  tests.c  tests.h  type_and_functions.c  type_and_functions.h
untitled2/: CMakeLists.txt  Cahier des charges  main.c
