cmake_minimum_required(VERSION 3.9)
project(Libft C)

set(CMAKE_C_STANDARD 99)

set(LIB_SRCS
        ft_atoi.c
        ft_atoi_base.c
        ft_bzero.c
        ft_charac_is_base.c
        ft_charac_is_sign.c
        ft_charac_is_whitespace.c
        ft_concat_params.c
        ft_create_elem.c
        ft_isalnum.c
        ft_isalpha.c
        ft_isascii.c
        ft_isdigit.c
        ft_isprint.c
        ft_itoa.c
        ft_list_at.c
        ft_list_clear.c
        ft_list_cpy.c
        ft_list_find.c
        ft_list_last.c
        ft_list_print.c
        ft_list_push_back.c
        ft_list_push_front.c
        ft_list_push_params.c
        ft_list_reverse.c
        ft_list_size.c
        ft_list_sort.c
        ft_lstadd.c
        ft_lstdel.c
        ft_lstdelone.c
        ft_lstiter.c
        ft_lstmap.c
        ft_lstnew.c
        ft_memalloc.c
        ft_memccpy.c
        ft_memchr.c
        ft_memcmp.c
        ft_memcpy.c
        ft_memdel.c
        ft_memmove.c
        ft_memset.c
        ft_numvalue_in_base.c
        ft_putchar.c
        ft_putchar_fd.c
        ft_putendl.c
        ft_putendl_fd.c
        ft_putnbr.c
        ft_putnbr_base.c
        ft_putnbr_fd.c
        ft_putstr.c
        ft_putstr_fd.c
        ft_putstr_non_printable.c
        ft_str_is_alpha.c
        ft_strcat.c
        ft_strchr.c
        ft_strclr.c
        ft_strcmp.c
        ft_strcpy.c
        ft_strdel.c
        ft_strdup.c
        ft_strequ.c
        ft_striter.c
        ft_striteri.c
        ft_strjoin.c
        ft_strlcat.c
        ft_strlen.c
        ft_strmap.c
        ft_strmapi.c
        ft_strncat.c
        ft_strncmp.c
        ft_strncpy.c
        ft_strnequ.c
        ft_strnew.c
        ft_strnstr.c
        ft_strrchr.c
        ft_strsplit.c
        ft_strstr.c
        ft_strsub.c
        ft_strtrim.c
        ft_strupcase.c
        ft_tolower.c
        ft_toupper.c
        libft.h)

add_library(ft ${LIB_SRCS} libft.h)
target_compile_options(ft PRIVATE ${FLAGS})